--- a/jade/home.jade
+++ b/jade/home.jade
@@ -4,9 +4,9 @@ block headtitle
   title Home | A Notable Mind
 
 block css
-  link(href="/static/css/home.css", rel="stylesheet", media="screen")
-  link(href="/static/css/thought.css", rel="stylesheet", media="screen")
-  link(href="/static/css/page.css", rel="stylesheet", media="screen")
+  link(href="/css/home.css", rel="stylesheet", media="screen")
+  link(href="/css/thought.css", rel="stylesheet", media="screen")
+  link(href="/css/page.css", rel="stylesheet", media="screen")
 
 block bodytitle
   span Take You Some Notes!
@@ -20,7 +20,6 @@ block container
       include pages/main
 
 block endjs
-  div {% csrf_token %}
   script.
     var TEMPLATES = [
         '/static/tpl/',
@@ -39,18 +38,18 @@ block endjs
       'ajax-profile-login': "{% url 'ajax-profile-login' %}",
       'ajax-profile-register': "{% url 'ajax-profile-register' %}"
     };
-  script(src="/static/libs/jslibs/expanding.js")
-  script(src="/static/libs/jslibs/Objectid.js")
-  // script(src="/static/libs/jslibs/backbone.localStorage.js")
-  script(src="/static/js/utils.js")
-  script(src="/static/js/template_loader.js")
-  script(src="/static/js/template_view.js")
-  script(src="/static/js/auto-models.js")
-  script(src="/static/js/models.js")
-  script(src="/static/js/widgets.js")
-  script(src="/static/js/views.js")
-  script(src="/static/js/app.js")
-  script(src="/static/js/notablemind.js")
-  script(src="/static/js/pages.js")
-  script(src="/static/js/home.js")
+  script(src="/libs/jslibs/expanding.js")
+  script(src="/libs/jslibs/Objectid.js")
+  // script(src="/libs/jslibs/backbone.localStorage.js")
+  script(src="/js/utils.js")
+  script(src="/js/template_loader.js")
+  script(src="/js/template_view.js")
+  script(src="/js/auto-models.js")
+  script(src="/js/models.js")
+  script(src="/js/widgets.js")
+  script(src="/js/views.js")
+  script(src="/js/app.js")
+  script(src="/js/notablemind.js")
+  script(src="/js/pages.js")
+  script(src="/js/home.js")
 
