--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -3,7 +3,7 @@ extends bootstrap
 block headtitle
   title Home | A Notable Mind
 
-block css
+append css
   link(href="/css/home.css", rel="stylesheet", media="screen")
   link(href="/css/thought.css", rel="stylesheet", media="screen")
   link(href="/css/page.css", rel="stylesheet", media="screen")
