adding real data! and making angularness awesome

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -38,18 +38,5 @@ block endjs
       'ajax-profile-login': "{% url 'ajax-profile-login' %}",
       'ajax-profile-register': "{% url 'ajax-profile-register' %}"
     };
-  script(src="/libs/jslibs/expanding.js")
-  script(src="/libs/jslibs/Objectid.js")
-  // script(src="/libs/jslibs/backbone.localStorage.js")
-  script(src="/js/utils.js")
-  script(src="/js/template_loader.js")
-  script(src="/js/template_view.js")
-  script(src="/js/auto-models.js")
-  script(src="/js/models.js")
-  script(src="/js/widgets.js")
-  script(src="/js/views.js")
-  script(src="/js/app.js")
-  script(src="/js/notablemind.js")
-  script(src="/js/pages.js")
-  script(src="/js/home.js")
+  script(src="/js/build.js")
 
