--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -7,6 +7,7 @@ append css
   link(href="/css/home.css", rel="stylesheet", media="screen")
   link(href="/css/thought.css", rel="stylesheet", media="screen")
   link(href="/css/page.css", rel="stylesheet", media="screen")
+  link(href="/css/build.css", rel="stylesheet", media="screen")
 
 block bodytitle
   span Take You Some Notes!
