--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -16,7 +16,7 @@ block container
     #pages.row-fluid(ng-view)
     .templates
       script(id='noteList.html', type='text/ng-template')
-        .note(ng-repeat="note in notes", data-note="note")
+        .note(ng-repeat="child in note.children", data-note="child")
       script(id="settings.html", type="text/ng-template").
         Nothing to see here.
 
