now its really back to working! :)

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -17,8 +17,8 @@ block container
     .templates
       script(id='noteList.html', type='text/ng-template')
         .top-note(data-note="note")
-      script(id="settings.html", type="text/ng-template").
-        Nothing to see here.
+      script(id="settings.html", type="text/ng-template")
+        div(data-settings-manager='default')
 
 append endjs
   script.
