--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -9,6 +9,10 @@ append css
 block bodytitle
   span Take You Some Notes!
 
+block extra-nav
+  li.connector
+    #connectivity.small
+
 block container
     #pages.row-fluid(ng-view)
     .templates
