--- a/assets/styl/home.styl
+++ b/assets/styl/home.styl
@@ -3,3 +3,21 @@ body {
   padding-top: 60px;
 }
 
+.navbar li.connector {
+  padding-top: 9px;
+  margin-left: 10px;
+
+  #connectivity {
+    padding-bottom: 0px;
+
+    .circle {
+      line-height: 17px;
+      margin-bottom: -9px;
+    }
+
+    .hoverStatus {
+      top: -5px;
+    }
+  }
+}
+
