--- a/assets/styl/home.styl
+++ b/assets/styl/home.styl
@@ -3,6 +3,11 @@ body {
   padding-top: 60px;
 }
 
+.navbar .nav>li>a.icon {
+  padding: 8px 15px 0;
+  font-size: 24px;
+}
+
 .navbar li.connector {
   padding-top: 9px;
   margin-left: 10px;
