adding promises and scoped events

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -17,7 +17,7 @@ block container
     #pages.row-fluid(ng-view)
     .templates
       script(id='noteList.html', type='text/ng-template')
-        .note.top-note(data-note='note', data-parent='true')
+        .note.top-note(data-note='note', data-parent='true', data-events='events')
       script(id="settings.html", type="text/ng-template")
         .settings-manager(data-settings-manager='notablemind')
           This should be replaced
